--- a/Test html and css/skeletonCreateAccount.css
+++ b/Test html and css/skeletonCreateAccount.css
@@ -1,24 +1,14 @@
-header nav ul li a{
-    text-decoration:  none;
-    font-size: 25px;
-    font-weight: 500;
-}
-header h1{
-    float: left;
-}
-header nav{
-    float: right;
-}
 header *{
-    background-color: black;
-    display: inline-block;
+    text-decoration:  none;
+    font-size: 1s5px;
 }
+
 section{
     display: inline-block;
 }
 
 main{
-    padding: 5rem;
+    padding: 4rem;
     text-align: center;
     color: red;
     font-size: 28px;
@@ -29,17 +19,12 @@ main P{
 }
 main p a{
     color: red;
-    font-size: 20px;
+    font-size: 10px;
 }
 footer *{
-    background-color: black;
-    display: inline-block;
-    font-size: 30px;
-    color: red;
+    text-decoration:  none;
+    font-size: 15px;
     letter-spacing: 8px;
-    text-align: left;
 }
-footer nav {
-    float: right;
-}
+
 
