--- a/Test html and css/skeletonCreateAccount.css
+++ b/Test html and css/skeletonCreateAccount.css
@@ -14,6 +14,12 @@ main{
     font-size: 28px;
     font-weight: 90;
 }
+main{
+    background-image: url(images.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
 main P{
     font-weight: 100;
 }
@@ -21,6 +27,7 @@ main p a{
     color: red;
     font-size: 10px;
 }
+
 footer *{
     text-decoration:  none;
     font-size: 15px;
