--- a/Test html and css/skeletonFAQ.css
+++ b/Test html and css/skeletonFAQ.css
@@ -19,7 +19,7 @@ main{
 
 .tabs {
   float: left;
-  border: 1px solid #d6d8db;;
+  border: 1px solid #d6d8db;
   width: 100%;
   height: 500px;
   background: #839496 linear-gradient(180deg, #96a4a6, #839496) repeat-x;
